[package]
name = "bevy_spacemouse"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacenav-plus = "0.1.0"
bevy = {version = "0.8", default-features = false}

[dev-dependencies]
bevy = {version = "0.8", default-features = false, features = ["render","x11", "bevy_asset"]}